Fixed problem with bedrock users with strange uuids Fixed isParameterised problem Added more server placeholders Fixed conditional placeholders problems with empty false case